--- a/public/locales/ka/common.json
+++ b/public/locales/ka/common.json
@@ -234,6 +234,7 @@
   "tableHeader.itemsCount": "რაოდენობა",
   "tableHeader.websiteUrl": "ვებგვერდი",
   "tableHeader.statusDesc": "სტატუსი",
+  "tableHeader.notifications": "შეტყობინებები",
   "tableHeader.weight": "წონა",
   "tableHeader.department": "დეპარტამენტი",
   "tableHeader.comeDate": "ჩამოსვლის თარიღი",
