added fixes and animation

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -597,7 +597,7 @@
   "search.parcels": "Search parcels...",
   "flights_title": "Flight Schedule",
   "flights_subtitle": "All flights in one place",
-  "you.have": "You Have",
+  "you.have": "You have",
   "brand": "SPACE CARGO",
   "voucherLabel": "Voucher",
   "authorizedPersons.addButton": "Add",
