added notification fixes

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -609,5 +609,6 @@
   "tableHeader.inpDate": "Registration Date",
   "tableHeader.districtDesc": "District Description",
   "tableHeader.cityDesc": "City Description",
-  "actions.markRead": "Mark Read"
+  "actions.markRead": "Mark Read",
+  "tableHeader.isRead":"Read Status"  
 }
